--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "react-portfolio",
   "private": true,
-  "homepage": "https://wunexx.github.io/react-portfolio",
+  "homepage": "https://wunexx.github.io/react-portfolio/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
